--- a/ck-design/style.css
+++ b/ck-design/style.css
@@ -1,5 +1,4 @@
 html {
-    overflow-x: hidden;
     width:100%;
 }
 
@@ -15,6 +14,7 @@ body {
 
 #content {
     width: 100%;
+    overflow-x: hidden;
 }
 
 #logo {
@@ -34,6 +34,14 @@ body {
     position: relative;
 }
 
+@media (max-width: 768px) {
+    #vita_box {
+        width: 100%;
+        left: 0;
+        margin-left: 0;
+    }
+}
+
 #picture {
     background-image: url('images/picture.png');
     background-repeat: no-repeat;
@@ -42,10 +50,21 @@ body {
     float: left;
 }
 
+@media (max-width: 768px) {
+    #picture {
+        display: none;
+    }
+}
+
 #vita_text {
     width: 250px;
     float: left;
-    margin-left: 10px;
+}
+
+@media (max-width: 768px) {
+    #vita_text {
+        width: 100%;
+    }
 }
 
 #vita_text_title>p {
@@ -53,7 +72,13 @@ body {
     font-family: Helvetica;
     color: rgb(145,147,150);
     text-align: left;
-    margin-top: 0;
+    margin: 0 10px 20px 10px;
+}
+
+@media (max-width: 768px) {
+    #vita_tex_title>p {
+        font-size: 22;
+    }
 }
 
 #vita_text>p {
@@ -61,14 +86,9 @@ body {
     font-family: Verdana;
     color: rgb(115,117,120);
     text-align: left;
-    margin-top: -5px;
+    margin: -5px 10px 0 10px;
 }
 
-@media (max-width: 992px) {
-    #vita_text>p {
-        font-size: 13;
-    }
-}
 
 @media (max-width: 768px) {
     #vita_text>p {
@@ -135,7 +155,7 @@ body {
 
 #contact {
     width: 100%;
-    height: 700px;
+    height: 600px;
 }
 
 #contact_title {
@@ -159,8 +179,16 @@ body {
 #contact_text{
     width: 194px;
     position: relative;
-    margin-left: 90px;
+    margin-left: 100px;
     left: 50%;
+}
+
+@media (max-width: 586px) {
+    #contact_text {
+        left: 0;
+        margin: 0;
+        width: 100%;
+    }
 }
 
 #contact_text>p {
@@ -168,12 +196,7 @@ body {
     font-family: Verdana;
     color: rgb(115,117,120);
     text-align: right;
-}
-
-@media (max-width: 992px) {
-    #contact_text>p {
-        font-size: 13;
-    }
+    margin-right: 10px;
 }
 
 @media (max-width: 768px) {
@@ -254,15 +277,9 @@ a:hover.powered {
     text-align: center;
 }
 
-@media (max-width: 992px) {
-    #impressum_text>p {
-        font-size: 13;
-    }
-}
-
 @media (max-width: 768px) {
     #impressum_text>p {
-        font-size: 15;
+        font-size: 13;
     }
 }
 
