--- a/ck-design/gallery.css
+++ b/ck-design/gallery.css
@@ -32,6 +32,15 @@ body {
     }
 }
 
+@media (max-width: 768px) {
+    #center {
+        margin-top: -100px;
+        left: 50%;
+        position: relative;
+        margin-left: -465px;
+    }
+}
+
 #line {
     background-image: url('images/gallery/punkteschlaufe.png');
     background-repeat: no-repeat;
@@ -50,9 +59,17 @@ body {
     height: 130px;
     margin: 30px 15px 30px 30px;
     position: relative;
+    z-index: 0;
 }
 
 @media (max-width: 1209px) {
+    #logo {
+        left: 50%;
+        margin-left: -78px;
+    }
+}
+
+@media (max-width: 768px) {
     #logo {
         left: 50%;
         margin-left: -78px;
@@ -179,6 +196,14 @@ body {
     }
 }
 
+@media (max-width: 768px) {
+    #description, #caption1, #caption2 {
+        text-align: center;
+        width: 100%;
+        position: relative;
+    }
+}
+
 .gallery-navigation {
     background-repeat: no-repeat;
     margin-left: 75px;
@@ -200,12 +225,24 @@ body {
     }
 }
 
+@media (max-width: 768px) {
+    #left-bar {
+        display: none;
+    }
+}
+
 #lower-bar {
     display: none;
     width: 100%;
 }
 
 @media (max-width: 1209px) {
+    #lower-bar {
+        display: block;
+    }
+}
+
+@media (max-width: 768px) {
     #lower-bar {
         display: block;
     }
